--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,4 +1,5 @@
 .box.svelte-1rsb9rv{background:white;border:black 2px solid;display:inline-block;width:100%;height:100%}.speaker.svelte-1rsb9rv{font-weight:500;padding-left:1.2rem;padding-top:1rem}p.svelte-1rsb9rv{padding:1rem;padding-top:0.3rem}
-.speechcontainer.svelte-rcoszw{position:absolute;bottom:5%;top:70%;left:10%;right:10%}
+.speechcontainer.svelte-h1f1i{position:absolute;bottom:5%;top:70%;left:10%;right:10%;z-index:10}.charactercontainer.svelte-h1f1i{position:absolute;bottom:5%;z-index:9;left:-5%}img.background.svelte-h1f1i{position:absolute;z-index:0;top:0;left:0;right:0;bottom:0;width:100%;height:100%}
+img.svelte-c4ky2f{width:100%;height:100%}
 
 /*# sourceMappingURL=bundle.css.map */
