--- a/public/global.css
+++ b/public/global.css
@@ -29,6 +29,17 @@ label {
 	display: block;
 }
 
+img.background {
+	position: absolute;
+	z-index: 0;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+}
+
 input, button, select, textarea {
 	font-family: inherit;
 	font-size: inherit;
